# Formal_Practical_2

./: CMakeLists.txt  README.md  build.sh  earley.cpp  lr.cpp
cmake/: CodeCoverage.cmake
src/: parser.hpp
src/builder/: builder_from_bnf.cpp  builder_from_bnf.hpp
src/earley/: earley_parser.cpp  earley_parser.hpp
src/grammar/: alphabet.hpp  grammar.cpp  grammar.hpp  simple_alphabet.cpp  simple_alphabet.hpp
src/lr-parser/: lr_analyzer.cpp  lr_analyzer.hpp  lr_parser.cpp  lr_parser.hpp
tests/: builder_from_bnf_test.cpp  earley_test.cpp  grammar_test.cpp  lr_test.cpp
